<resources>
    <string name="app_name">Peacock Solar</string>
    <string name="peackock_solar">PEACKOCK SOLAR</string>
    <string name="logo">logo</string>
    <string name="hello_there_welcome">Hello there, Welcome !!!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="peacock_solar">PEACOCK SOLAR</string>
    <string name="logo_image">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forget_password">FORGET PASSWORD</string>
</resources>